--- a/Tyuiu.DolgushinVA.Sprint7.Project.V12.Test/Tyuiu.DolgushinVA.Sprint7.Project.V12.Test.csproj
+++ b/Tyuiu.DolgushinVA.Sprint7.Project.V12.Test/Tyuiu.DolgushinVA.Sprint7.Project.V12.Test.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.DolgushinVA.Sprint7.Project.V12.Lib\Tyuiu.DolgushinVA.Sprint7.Project.V12.Lib.csproj">
+      <Project>{8520b786-c3cc-45ff-8169-0645209f9a51}</Project>
+      <Name>Tyuiu.DolgushinVA.Sprint7.Project.V12.Lib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
