--- a/Tyuiu.DolgushinVA.Sprint7.Project.V12/Tyuiu.DolgushinVA.Sprint7.Project.V12.csproj
+++ b/Tyuiu.DolgushinVA.Sprint7.Project.V12/Tyuiu.DolgushinVA.Sprint7.Project.V12.csproj
@@ -132,5 +132,8 @@
       <Name>Tyuiu.DolgushinVA.Sprint7.Project.V12.Lib</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\background.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
