--- a/Tyuiu.DolgushinVA.Sprint7.Project.V12/Tyuiu.DolgushinVA.Sprint7.Project.V12.csproj
+++ b/Tyuiu.DolgushinVA.Sprint7.Project.V12/Tyuiu.DolgushinVA.Sprint7.Project.V12.csproj
@@ -138,5 +138,8 @@
   <ItemGroup>
     <None Include="Resources\backgroundinfo.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cross.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
